src/app/organizations/organizations/organizations.component.scss
@import 'bootstrap4.scss';
@import '/src/materialColorScheme.scss';

.mat-icon {
  @extend .pr-5;
}

.h5 {
  color: #151c3d;
  font-weight: 500;
}

.org-topic {
  line-height: 1.5;
  color: mat-color($dockstore-app-gray, darker);
  // Hide overflow if longer than 4 lines
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: initial;
  display: -webkit-box;
  -webkit-line-clamp: 4;
  -webkit-box-orient: vertical;
  word-break: break-word;
}

.orgStar {
  font-size: 1.5rem;
  color: #3f51b5;
  height: auto;
  padding: 0 !important;
}

.info.span {
  font-size: 10px;
}

.info-icon {
  font-size: 1.5rem;
  height: auto;
  color: mat-color($dockstore-app-accent);
  padding: 0 !important;
}

.info {
  font-size: 12px;
  line-height: 2rem;
}

.info-overflow {
  // Hide overflow if longer than 1 line
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: initial;
  display: -webkit-box;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
  word-break: break-word;
}

form {
  margin-bottom: -1rem;
}

.form-field {
  transform: scale(0.9);
}

.mat-form-field-appearance-outline .mat-form-field-outline {
  border: black 2px solid;
}

